[gd_scene load_steps=6 format=3 uid="uid://bvgrdkjyawqom"]

[ext_resource type="Script" uid="uid://cxspcupa24h44" path="res://scripts/navigation_dial.gd" id="1_4xrh6"]
[ext_resource type="Texture2D" uid="uid://cwluw5i5qd1tc" path="res://assets/Untitled_Artwork 36.png" id="2_un5tb"]
[ext_resource type="Texture2D" uid="uid://tqygiairlubi" path="res://assets/Untitled_Artwork 37.png" id="3_mrbd7"]
[ext_resource type="Texture2D" uid="uid://b4nth6vr5iskh" path="res://assets/Untitled_Artwork 38.png" id="4_i6ngy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4xrh6"]
size = Vector2(229, 233)

[node name="NavigationDial" type="Node2D"]
script = ExtResource("1_4xrh6")

[node name="DialSprite" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -1024.0
offset_right = 1024.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.120000005, 0.120000005)
pivot_offset = Vector2(1024, 1024)
texture = ExtResource("2_un5tb")

[node name="TargetIndicator" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -1398.0
offset_right = 204.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.08000046, 0.08000046)
pivot_offset = Vector2(204, 1398)
texture = ExtResource("3_mrbd7")

[node name="Indicator" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -428.0
offset_top = -1588.0
offset_right = 428.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.07, 0.07)
pivot_offset = Vector2(428, 1588)
texture = ExtResource("4_i6ngy")

[node name="ClickableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea"]
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_4xrh6")
